Fix failing testSetCrossProfilePackages cts test
The test was passing on eng build taregt but failing
on all other build target because the test activities that
it depends on were missing exported=true

Fixes: 156995516
Test: atest testSetCrossProfilePackages_killsApps on a taimen-user build
Change-Id: I9289f5949b9345003042d07918ed54393b4d8690

--- a/hostsidetests/devicepolicy/app/DummyApps/dummyapp1/AndroidManifest.xml
+++ b/hostsidetests/devicepolicy/app/DummyApps/dummyapp1/AndroidManifest.xml
@@ -31,7 +31,8 @@
             </intent-filter>
         </receiver>
         <activity
-            android:name="android.app.Activity">
+            android:name="android.app.Activity"
+            android:exported="true">
         </activity>
     </application>
 </manifest>
